# career-navigator

./: .env.example  .gcloudignore  .gitignore  .mcp.json  CLAUDE.md  CONNECTORS.md  Dockerfile  PRIVACY.md  README.md  career-navigator-spec.md  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: mcp-luma-mcpb.yml  (+1 more)
agents/: job-scout.md  resume-coach.md
commands/: add-source.md  ai-analysis.md  application-update.md  artifact-saved.md  assessment.md  ats-optimization.md  benchmark.md  career-plan.md  compare-offers.md  content-suggest.md  cover-letter.md  daily-schedule.md  draft-outreach.md  evaluate-offer.md  evaluate-post.md  event-intelligence.md  event-radar.md  focus-career.md  follow-up-timing.md  follow-up.md  launch.md  list-artifacts.md  market-brief.md  negotiate-offer.md  network-map.md  networking-strategy.md  pattern-analysis.md  pipeline-dashboard.md  report.md  resume-score.md  salary-research.md  search-jobs.md  setup.md  skill-transfer.md  suggest-roles.md  tailor-resume.md  track-application.md  training-roi.md
hooks/: hooks.json  session-start.sh  sync-watchdir.sh
mcp-luma/: .gitignore  LICENSE  README.md  manifest.json  pyproject.toml  server.json
mcp-luma/src/luma_mcp/: auth.py  config.py  event_store.py  geo.py  geocode.py  ics.py  luma_registry.py  luma_web_client.py  models.py  server.py
mcp-voice/: manifest.json  pyproject.toml
references/: career-navigator-spec.md  phase-1f-spec.md  phase-test-plan.md
scripts/: init.py  load-context.sh  voice_server.py
templates/: tracker.json.template
(+60 files in other folders)
